@@ -1,3 +1,7 @@
+2006-02-26	Benedikt Meurer <benny@xfce.org>
+
+	* xfce4-session/shutdown.c: Fix indentation.
+
 2005-11-30	Benedikt Meurer <benny@xfce.org>
 
 	* settings/session/session.c, settings/splash/splash.c: Fix naming
